Thu Sep 21 15:38:05 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* More robust table opening for Quartz, and fixed testsuite.

Thu Sep 21 15:06:55 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Renamed Record to OmIndexerData and Message to OmIndexerMessage.

Thu Sep 21 13:05:58 BST 2000 Olly Betts

	* Removed unused variable `weights' from LocalMatch class.
 
Thu Sep 21 13:00:08 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* A fix for building on Solaris with gcc.

Thu Sep 21 12:58:18 BST 2000 Olly Betts

	* LocalMatch again.  Now that mopts is stored, we don't need to read
	  out most of the contents until we use them.

Thu Sep 21 11:37:39 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Make dist will now fail if Perl XML parser is not available - this
	  means that TODO's in the distribution should always be present and
	  up-to-date.

Thu Sep 21 11:16:22 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Various work making distclean remove all the files it should.  Still
	  leaves Makefiles in directories optionally configured off there,
	  automake bug perhaps?

Thu Sep 21 11:08:21 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Some tweaks to AutoPtr.

Wed Sep 20 19:07:30 BST 2000 Olly Betts

	* More LocalMatch work.

Wed Sep 20 18:57:55 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Make quartztest compile again.  (Though it fails)

Wed Sep 20 18:56:26 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* docs/Makefile.am, only build apidocs when making a dist, leave full
	  documentation for a local install.

Wed Sep 20 18:26:33 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Updated Quartz to use AutoPtr

Wed Sep 20 17:52:06 BST 2000 Olly Betts

	* More work on LocalMatch.

Wed Sep 20 17:49:23 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Updated NEWS

Wed Sep 20 16:48:20 BST 2000 Olly Betts
