@@ -63,7 +63,6 @@ class SubMatch {
 	    pl->set_termweight(wt);
 	    return pl;
 	}
-
 };   
 
 ////////////////////////////////////////////////////////////////////////////
